2010-12-06 : turned off udunits2 warnings when reading database in
2010-11-18 : added a '/' after output path for tmp file testing
2010-11-12 : Updated documentation
2010-11-11 : updated pywrapper from Jamie
2010-11-11 : new examples into Makefile for Python
2010-11-11 : added a flag that says need to cal cmor_grid on some axis (site and location)
2010-11-05 : new doc updated by Karl.
2010-11-05 : removed option, for now, to create non-standard calendars because the dates in filenames would be wrong.
2010-11-05 : file_name=True ignored in python if no var_id is passed to it as well.
2010-11-05 : added realm to gridspec file names
2010-11-05 : reverted ext_cell_measures to cell_measures
2010-10-27 : edited the test for permission on output directory, used to fail if you had group write privileges but that wasnt your main group
2010-10-22 : Tagging 2.4.0
2010-10-22 : updated docs to reflect all these changes
2010-10-22 : exposed cmor_set/get/has_variable in Fortran interface, just like Python works only on "string" variables
2010-10-22 : add optional "parent_experiment_rip" to cmor_dataset (C,Fortran,Python)
2010-10-22 : fixed bug with variables using "grids" and singleton dimensions
2010-10-22 : upgraded to 2.4 in devel branch
2010-10-22 : exposed cmor_set_variable_attribute to users in Python
2010-10-22 : cell_measures var attribute is now called ext_cell_measures
2010-10-06 : tagging 2.3
2010-09-29 : Cleaned up error messages, now tries to output var/axis it was working on as well as table used.
2010-09-29 : When value that exceeds valid_min/max is found, now returns location of extreme point instead of first point encountered, as well as actuall coordinates values (not just indices)
2010-09-22 : Joerg found a bug that was due to checking only the refvar.dimension w/o checking the actual tables as well
2010-09-01 : fixed a bug on mac 32bit when reading in net3 version string