@@ -1,3 +1,4 @@
+2011-01-24 : updated cmor_set_variable_attrubtes to go thru an 'internal' one
 2010-12-06 : turned off udunits2 warnings when reading database in
 2010-11-18 : added a '/' after output path for tmp file testing
 2010-11-12 : Updated documentation
